SongManager funcionando com funções auxiliares
Funções auxiliares implementadas em SongManagerAux.cpp, Makefile atualizado para compilar na ordem correta. Warnings eliminados com sucesso.
Falta:
Integrar o sistema de classes implementado.
Corrigir as mensagens de erro do .pl

--- a/cpp-songmanager/Makefile
+++ b/cpp-songmanager/Makefile
@@ -4,21 +4,21 @@ LD=g++
 CCFLAGS=$(shell perl -MExtUtils::Embed -e ccopts)
 LDFLAGS=$(shell perl -MExtUtils::Embed -e ldopts)
 
-#OBJECTS = $(PROGRAM)Aux
+OBJECTS = $(PROGRAM)Aux
 POBJECTS=$(PROGRAM).o
 
 PROGRAM = SongManager
 
-all: $(PROGRAM)
+all: $(PROGRAM) $(OBJECTS).o
 
-#$(OBJECTS).o: $(OBJECTS).cpp
-#		$(CC) $(CCFLAGS) -o $@ -c $<
+$(OBJECTS).o: $(OBJECTS).cpp
+		$(CC) $(CCFLAGS) -o $@ -c $<
 
 $(PROGRAM).o: $(PROGRAM).cpp
 		$(CC) $(CCFLAGS) -o $@ -c $<
 
-$(PROGRAM): $(PROGRAM).o
-		$(LD) -o $@ $(OBJECTS) $< $(LDFLAGS)
+$(PROGRAM): $(PROGRAM).o $(OBJECTS).o
+		$(LD) -o $@ $(OBJECTS).o $< $(LDFLAGS)
 
 clean:
-	rm -f $(PROGRAM) $(POBJECTS)
+	rm -f $(PROGRAM) $(POBJECTS) $(OBJECTS).o
