--- a/SongManagerC/Makefile
+++ b/SongManagerC/Makefile
@@ -1,20 +1,33 @@
+# /*
+# #   Universidade Federal do Rio de Janeiro
+# #   Departamento de Eletronica e de Computacao
+# #   Linguagens de Programacao
+# #
+# #   Trabalho 03
+# #
+# #   Grupo:
+# #      Krishynan Shanty
+#       Nicholas Quagliani
+# */
+
+
 CC=g++
 LD=g++
 
-CCFLAGS=$(shell perl -MExtUtils::Embed -e ccopts)  
+CCFLAGS=$(shell perl -MExtUtils::Embed -e ccopts)
 LDFLAGS=$(shell perl -MExtUtils::Embed -e ldopts)
 
-AUXILIAR = musica
+MUSICA = musica
 OBJECTS = $(PROGRAM)Aux
 POBJECTS= $(PROGRAM).o
 
 PROGRAM = SongManager
 
-all: $(PROGRAM) $(OBJECTS).o $(AUXILIAR).o
+all: $(PROGRAM) $(OBJECTS).o $(MUSICA).o
 
 objects: $(OBJECTS).o
 
-$(AUXILIAR).o: $(AUXILIAR).cpp
+$(MUSICA).o: $(MUSICA).cpp
 		$(CC) -o $@ -c $<
 
 $(OBJECTS).o: $(OBJECTS).cpp
@@ -23,8 +36,8 @@ $(OBJECTS).o: $(OBJECTS).cpp
 $(PROGRAM).o: $(PROGRAM).cpp
 		$(CC) $(CCFLAGS) -o $@ -c $<
 
-$(PROGRAM): $(PROGRAM).o $(OBJECTS).o $(AUXILIAR).o
-		$(LD) -o $@ $(OBJECTS).o $(AUXILIAR).o $< $(LDFLAGS)
+$(PROGRAM): $(PROGRAM).o $(OBJECTS).o $(MUSICA).o
+		$(LD) -o $@ $(OBJECTS).o $(MUSICA).o $< $(LDFLAGS)
 
 clean:
-	rm -vf $(PROGRAM) $(POBJECTS) $(OBJECTS).o $(AUXILIAR).o
+	rm -vf $(PROGRAM) $(POBJECTS) $(OBJECTS).o $(MUSICA).o
